{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 37,
  "lineage": "d395c7e3-2854-cd9a-44ad-359226391435",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "practice-main-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878137523488:route-table/rtb-0b0b2b7899846701f",
            "default_route_table_id": "rtb-0b0b2b7899846701f",
            "id": "rtb-0b0b2b7899846701f",
            "owner_id": "878137523488",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d00ed6c50b2451ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "practice-main-rt",
              "key": "practice-main-rt"
            },
            "tags_all": {
              "Name": "practice-main-rt",
              "key": "practice-main-rt"
            },
            "vpc_id": "vpc-0d4ba40763a0e6745"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.practice-igw",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878137523488:security-group/sg-0d72e2fee9b01d74e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rule for out bound traffic for the instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d72e2fee9b01d74e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rule for http",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "154.113.118.2/32"
                ],
                "description": "ingress rule for ssh port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "878137523488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "practice-default-sg",
              "key": "practice-default-sg"
            },
            "tags_all": {
              "Name": "practice-default-sg",
              "key": "practice-default-sg"
            },
            "vpc_id": "vpc-0d4ba40763a0e6745"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "practice-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878137523488:internet-gateway/igw-0d00ed6c50b2451ad",
            "id": "igw-0d00ed6c50b2451ad",
            "owner_id": "878137523488",
            "tags": {
              "Name": "practice-igw",
              "key": "practice-igw"
            },
            "tags_all": {
              "Name": "practice-igw",
              "key": "practice-igw"
            },
            "vpc_id": "vpc-0d4ba40763a0e6745"
          },
          "dependencies": [
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "practice-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878137523488:subnet/subnet-0f0a054d3c5b56dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f0a054d3c5b56dbb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878137523488",
            "tags": {
              "Name": "practice-subnet-1a",
              "key": "practice-subnet-1a"
            },
            "tags_all": {
              "Name": "practice-subnet-1a",
              "key": "practice-subnet-1a"
            },
            "vpc_id": "vpc-0d4ba40763a0e6745"
          },
          "dependencies": [
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "practice-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878137523488:vpc/vpc-0d4ba40763a0e6745",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0867a916be12450c6",
            "default_route_table_id": "rtb-0b0b2b7899846701f",
            "default_security_group_id": "sg-0d72e2fee9b01d74e",
            "dhcp_options_id": "dopt-d11a3cab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d4ba40763a0e6745",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b0b2b7899846701f",
            "owner_id": "878137523488",
            "tags": {
              "Name": "practice-vpc",
              "key": "practice-vpc"
            },
            "tags_all": {
              "Name": "practice-vpc",
              "key": "practice-vpc"
            }
          }
        }
      ]
    }
  ]
}